# secure-card-game

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-checks.yml
cli/: Cargo.toml
cli/src/: lib.rs
common/: Cargo.toml
common/src/: cards.rs  game.rs  lib.rs
crypto/: Cargo.toml
crypto/src/: encryption.rs  lib.rs  main.rs  shuffle.rs  shuffle_v2.rs  types.rs
game/: Cargo.toml
game/src/: card.rs  clickable.rs  game_state.rs  gui_printer.rs  hand.rs  image_database.rs  lib.rs  lobby_scene.rs  main.rs  stack.rs  table_scene.rs  window.rs
network/: Cargo.toml
network/src/: communication.rs  con_startup.rs  connection.rs  lib.rs  main.rs  message.rs
report/: report.tex
src/: main.rs  moves.rs  player.rs  simple_game.rs  window.rs
webapp/: Cargo.toml
webapp/src/: lib.rs  pri_sel.rs  server.rs
webapp/static/: index.html  scripts.js  styles.css
