[package]
name = "secure-card-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "./common", package = "common-scg" }
crypto = { path = "./crypto", package = "crypto-scg" }

[workspace]
members = [ "cli", "common" , "crypto", "network"]

[dev-dependencies]
cli = { path = "cli", package = "cli-scg" }
