[package]
name = "secure-card-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
common = { path = "./common", package = "common-scg" }
crypto = { path = "./crypto", package = "crypto-scg" }
network = { path = "./network", package = "network" }
game = { path = "./game", package = "game" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cli = { path = "cli", package = "cli-scg" }
gtk = "0.16"
glib = "0.16"

[workspace]
members = [ "cli", "common" , "crypto", "game", "network"]

[dev-dependencies]
