[package]
name = "crypto-scg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-pallas = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
ark-test-curves = {version = "0.4.2" , features = ["bls12_381_curve"]}
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
