[package]
name = "webapp-scg"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common", package = "common-scg" }
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
awc = "3.5.0"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"